--- a/CollectorQi.Android/CollectorQi.Android.csproj
+++ b/CollectorQi.Android/CollectorQi.Android.csproj
@@ -176,7 +176,7 @@
     <AndroidResource Include="Resources\drawable\security.png" />
     <AndroidResource Include="Resources\drawable\voltar.png" />
     <AndroidResource Include="Resources\drawable\zoomMini.png" />
-    <AndroidResource Include="Resources\layout\Layout.axml" />
+    <AndroidResource Include="Resources\layout\Layout1.axml" />
     <AndroidResource Include="Resources\drawable\splash_background.xml" />
     <AndroidResource Include="Resources\mipmap-hdpi\iconsca.png" />
     <AndroidResource Include="Resources\mipmap-mdpi\iconsca.png" />
@@ -191,7 +191,6 @@
     <AndroidResource Include="Resources\drawable\entry_icon_password.png" />
     <AndroidResource Include="Resources\drawable\icon_help.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\CollectorQi\CollectorQi.csproj">
       <Project>{0F0AA78D-0274-4FEA-82DA-9A7F514F6087}</Project>
@@ -319,4 +318,9 @@
     </WebReferenceUrl>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadXFormsNugetUpgradeInfoBarCollectorQiAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
