--- a/CollectorQi.Android/CollectorQi.Android.csproj
+++ b/CollectorQi.Android/CollectorQi.Android.csproj
@@ -49,6 +49,10 @@
     <EnableProguard>true</EnableProguard>
     <AndroidLinkSkip>Xamarin.Android.Support.v7.AppCompat;Xamarin.Android.Support.v4</AndroidLinkSkip>
     <AndroidSupportedAbis>x86_64;x86;armeabi-v7a;arm64-v8a</AndroidSupportedAbis>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugErro|AnyCPU' ">
     <DebugType>
@@ -109,6 +113,7 @@
     <Compile Include="EmptyClass.cs" />
     <Compile Include="ILogImplemention.cs" />
     <Compile Include="WebService\CallProcedureWithToken.cs" />
+    <Compile Include="WebService\Certificate.cs" />
     <Compile Include="WebService\UserLogin.cs" />
     <Compile Include="Web References\santacolomba_dts.totvscloud.com.br\Reference.cs">
       <DependentUpon>Reference.map</DependentUpon>
