--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="System.ServiceModel.Http" Version="4.5.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.7.2" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
     <PackageReference Include="sqlite-net" Version="1.0.8" />
     <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
@@ -105,6 +106,9 @@
     </Compile>
     <Compile Update="Views\ConferenciaFisicaReparosPage.xaml.cs">
       <DependentUpon>ConferenciaFisicaReparosPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ImprimirPage.xaml.cs">
+      <DependentUpon>ImprimirPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\LeituraEtiquetaLocaliza.xaml.cs">
       <DependentUpon>LeituraEtiquetaLocaliza.xaml</DependentUpon>
