--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -107,8 +107,17 @@
     <Compile Update="Views\ConferenciaFisicaReparosPage.xaml.cs">
       <DependentUpon>ConferenciaFisicaReparosPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\ImprimirEtiquetaReparo.xaml.cs">
+      <DependentUpon>ImprimirEtiquetaReparo.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ImprimirEtiquetaLocalizacao.xaml.cs">
+      <DependentUpon>ImprimirEtiquetaLocalizacao.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\ImprimirPage.xaml.cs">
       <DependentUpon>ImprimirPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ImprimirEtiquetaItem.xaml.cs">
+      <DependentUpon>ImprimirEtiquetaItem.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\InventarioCaixaIncompletaPopUp.xaml.cs">
       <DependentUpon>InventarioCaixaIncompletaPopUp.xaml</DependentUpon>
