Ajustes - Nota Fiscal

--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -121,6 +121,12 @@
     <Compile Update="Views\InventarioCaixaIncompletaPopUp.xaml.cs">
       <DependentUpon>InventarioCaixaIncompletaPopUp.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\NotaFiscalFinalizarItemConferenciaListaPage.xaml.cs">
+      <DependentUpon>NotaFiscalFinalizarItemConferenciaListaPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\NotaFiscalFinalizarConferenciaListaPage.xaml.cs">
+      <DependentUpon>NotaFiscalFinalizarConferenciaListaPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\NotaFiscalConferenciaReparosListaPage.xaml.cs">
       <DependentUpon>NotaFiscalConferenciaReparosListaPage.xaml</DependentUpon>
     </Compile>
