finalizacao impressao (inventario)

--- a/CollectorQi.Android/CollectorQi.Android.csproj
+++ b/CollectorQi.Android/CollectorQi.Android.csproj
@@ -337,6 +337,18 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\deleteMini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\print.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\product.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\forklift.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\repair.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
