--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -124,6 +124,9 @@
     <Compile Update="Views\InventarioReparoLeituraEtiquetaListaPage.xaml.cs">
       <DependentUpon>InventarioReparoLeituraEtiquetaListaPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\InventarioReparoLeituraEtiquetaManual.xaml.cs">
+      <DependentUpon>InventarioReparoLeituraEtiquetaManual.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\InventarioReparoListaPage.xaml.cs">
       <DependentUpon>InventarioReparoListaPage.xaml</DependentUpon>
     </Compile>
