--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -136,6 +136,9 @@
     <Compile Update="Views\InventarioReparoLeituraEtiquetaManual.xaml.cs">
       <DependentUpon>InventarioReparoLeituraEtiquetaManual.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\TransferenciaDepositoListaPage.xaml.cs">
+      <DependentUpon>TransferenciaDepositoListaPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\InventarioReparoListaPage.xaml.cs">
       <DependentUpon>InventarioReparoListaPage.xaml</DependentUpon>
     </Compile>
