--- a/CollectorQi.Android/CollectorQi.Android.csproj
+++ b/CollectorQi.Android/CollectorQi.Android.csproj
@@ -373,6 +373,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\notaEntrada.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\drawable\movto_repair.png" />
+    <AndroidResource Include="Resources\drawable\movto_repair2.png" />
+    <AndroidResource Include="Resources\drawable\movto_repair3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
