--- a/CollectorQi.Android/Properties/AndroidManifest.xml
+++ b/CollectorQi.Android/Properties/AndroidManifest.xml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="9" package="com.collector.qualiit.collectorqi" android:versionName="1.0.9(t)" android:installLocation="internalOnly">
-	<uses-sdk android:minSdkVersion="30" android:targetSdkVersion="28" />
+	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<application android:label="CollectorQi" android:icon="@mipmap/iconsca"></application>
 </manifest>
