--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -103,11 +103,14 @@
     <Compile Update="Views\Armazenagem\ESCL010\ArmazenagemImprimirPage.xaml.cs">
       <DependentUpon>ArmazenagemImprimirPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\Armazenagem\ESCL021\DepositosUsuarioPorTransacaoListaPage.xaml.cs">
-      <DependentUpon>DepositosUsuarioPorTransacaoListaPage.xaml</DependentUpon>
+    <Compile Update="Views\Armazenagem\ESCL021\DepositosUsuarioPorTransacaoListaPopUp.xaml.cs">
+      <DependentUpon>DepositosUsuarioPorTransacaoListaPopUp.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Armazenagem\ESCL021\TransferenciaDepositoPage.xaml.cs">
       <DependentUpon>TransferenciaDepositoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Armazenagem\ESCL027\GuardaMateriasConfirmaQuantidadePopUp.xaml.cs">
+      <DependentUpon>GuardaMateriasConfirmaQuantidadePopUp.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Armazenagem\ESCL029\MovimentoReparosOpcoesTransferenciaPage.xaml.cs">
       <DependentUpon>MovimentoReparosOpcoesTransferenciaPage.xaml</DependentUpon>
@@ -124,8 +127,17 @@
     <Compile Update="Views\Armazenagem\ESCL027\GuardaMateriasDepositoLocalizPopUp.xaml.cs">
       <DependentUpon>GuardaMateriasDepositoLocalizPopUp.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Armazenagem\ArmazenagemPrintPopUp.xaml.cs">
+      <DependentUpon>ArmazenagemPrintPopUp.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\ESCL000\DepositoPopUp.xaml.cs">
       <DependentUpon>DepositoPopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoListaDepositoPopUp.xaml.cs">
+      <DependentUpon>InventarioReparoListaDepositoPopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoLeituraEtiquetaBarrasPopUp.xaml.cs">
+      <DependentUpon>InventarioReparoLeituraEtiquetaBarrasPopUp.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Recebimento\ESCL002\ConferenciaFisicaParametrosPage.xaml.cs">
       <DependentUpon>ConferenciaFisicaParametrosPage.xaml</DependentUpon>
@@ -178,11 +190,14 @@
     <Compile Update="Views\Armazenagem\ESCL027\GuardaMateriaisDepositoItemListaPage.xaml.cs">
       <DependentUpon>GuardaMateriaisDepositoItemListaPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\InventarioReparoLeituraEtiquetaListaPage.xaml.cs">
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoLeituraEtiquetaListaPage.xaml.cs">
       <DependentUpon>InventarioReparoLeituraEtiquetaListaPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\InventarioReparoLeituraEtiquetaManual.xaml.cs">
-      <DependentUpon>InventarioReparoLeituraEtiquetaManual.xaml</DependentUpon>
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoLeituraEtiquetaManualPopUp.xaml.cs">
+      <DependentUpon>InventarioReparoLeituraEtiquetaManualPopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Recebimento\ESCL028\NotaFiscalConferenciaReparosDetPopUp.xaml.cs">
+      <DependentUpon>NotaFiscalConferenciaReparosDetPopUp.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Recebimento\ESCL028\NotaFiscalConferenciaReparosListaPopUp.xaml.cs">
       <DependentUpon>NotaFiscalConferenciaReparosListaPopUp.xaml</DependentUpon>
@@ -190,13 +205,13 @@
     <Compile Update="Views\TransferenciaDepositoListaPage.xaml.cs">
       <DependentUpon>TransferenciaDepositoListaPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\InventarioReparoListaPage.xaml.cs">
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoListaPage.xaml.cs">
       <DependentUpon>InventarioReparoListaPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\InventarioFisicoListaPage.xaml.cs">
       <DependentUpon>InventarioFisicoListaPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\InventarioReparoDepositoListaPage.xaml.cs">
+    <Compile Update="Views\Inventario\ESCL017\InventarioReparoDepositoListaPage.xaml.cs">
       <DependentUpon>InventarioReparoDepositoListaPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Recebimento\ESCL028\NotaFiscalFinalizarItemConferenciaListaPage.xaml.cs">
