--- a/CollectorQi/CollectorQi.csproj
+++ b/CollectorQi/CollectorQi.csproj
@@ -29,6 +29,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="17.1.0.42" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Matcha.BackgroundService" Version="1.0.5478" />
@@ -137,6 +138,18 @@
     </Compile>
     <Compile Update="Views\Inventario\ESCL017\InventarioReparoLeituraEtiquetaBarrasPopUp.xaml.cs">
       <DependentUpon>InventarioReparoLeituraEtiquetaBarrasPopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL018B\InventarioCaixaIncompletaPopUpB.xaml.cs">
+      <DependentUpon>InventarioCaixaIncompletaPopUpB.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL018B\InventarioListaItemPageB.xaml.cs">
+      <DependentUpon>InventarioListaItemPageB.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL018B\InventarioListaLocalizacaoPageB.xaml.cs">
+      <DependentUpon>InventarioListaLocalizacaoPageB.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Inventario\ESCL018B\InventarioListaPageB.xaml.cs">
+      <DependentUpon>InventarioListaPageB.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Recebimento\ESCL002\ConferenciaFisicaParametrosPage.xaml.cs">
       <DependentUpon>ConferenciaFisicaParametrosPage.xaml</DependentUpon>
