--- a/CollectorQi.Android/Properties/AndroidManifest.xml
+++ b/CollectorQi.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="16" package="com.collector.qualiit.collectorqi" android:versionName="1.0.11(p)" android:installLocation="internalOnly">
-	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="27" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" package="com.collector.qualiit.collectorqi" android:versionName="1.0.13(h)" android:installLocation="internalOnly">
+	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
